# ocr-symbaroum-charsheets-streamlit

./: .codecov.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  .style.yapf  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DupCharByToken.js  LICENSE.md  README.md  app.py  initiative.py  mypy.ini  packages.txt  pyproject.toml  pytest.ini  streamlit_entrypoint.py  tomb_of_dying_dreams.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/scripts/: install_chrome.sh  macos_debug.sh  macos_prod.sh  ubuntu_debug.sh  ubuntu_prod.sh
.github/workflows/: codeql-analysis.yml  greetings.yml  lint.yml  linting_and_tests.yml  pytest-coveralls.yml  tests.yml
.streamlit/: config.toml
adventures/tomb_of_dying_dreams/: tomb_of_dying_dreams.md
roll20_macros/: makros.sh
src/: __main__.py  app.py  config.yaml  image_processing.py  initiative.py  main.py  ocr.py  process_image.py  process_language.py  process_text.py  spock_config.py  streamlit_helper.py  streamlit_setup.py  translate.py  utils.py
src/conf/: config.yaml
src/conf/extraction/: default.yaml
src/conf/ocr/: default.yaml
src/conf/streamlit/: default.yaml
src/conf/testing/: enabled.yaml
src/process_text/: base_extractor.py  extract_english.py  extract_german.py  extract_info.py  process_ocr.py
src/streamlit_handlers/: image_handler.py  information_extraction_handler.py  ocr_handler.py  sidebar_handler.py
tests/: conftest.py  generate_visual_baseline.sh  run_cov.sh  run_tests.sh  testing_config.yaml  testing_utils.py  visual_testing.py
tests/integration/app/: test_app_functionality.py  test_app_radiobutton_click.py  test_app_startup.py  test_chrome.py  test_localhost.py
tests/integration/main/: conftest.py  test_main.py
tests/unit/: conftest.py  input_ocr_texts.py  requirements.txt
tests/unit/image_processing/: test_load_image.py
tests/unit/ocr/: conftest.py  test_detect_text_from_image.py  test_extract_all_attributes_from_text.py  test_extract_all_skills_from_text.py  test_extract_tactics_from_text.py  test_get_all_attribute_names_values_from_text.py  test_get_attribute_value_from_text.py  test_get_roll20_chat_input_str.py  test_get_roll20_setattr_str.py  test_get_toughness.py  test_ocr.py  (+3 more)
(+139 files in other folders)
