[tool.poetry]
name = "symbaroum-adventures"
version = "0.1.0"
description = ""
authors = ["Sven Stehle <svenstehle@web.de>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
pandas = "^1.4.2"
opencv-python = "^4.5.5"
textblob = "^0.17.1"
pytesseract = "^0.3.9"
Pillow = "^9.1.0"
pre-commit = "^2.18.1"
spock-config = "^2.5.0"
mypy = "^0.942"
streamlit = "^1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-sugar = "^0.9.4"
pytest-icdiff = "^0.5"
pytest-instafail = "^0.4.2"
pytest-xdist = "^2.5.0"
pylint = "^2.13.5"
pytest-cov = "^3.0.0"
pytest-randomly = "^3.11.0"
pytest-deadfixtures = "^2.2.1"
yapf = "^0.32.0"
mypy = "^0.942"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
