[tool.poetry]
name = "symbaroum-adventures"
version = "0.1.0"
description = "OCR detection app for Symbaroum on Streamlit"
authors = ["Sven Stehle <svenstehle@web.de>"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11.0"
numpy = "^1.22.3"
pandas = "^1.4.2"
pytesseract = "^0.3.9"
Pillow = "^9.1.0"
pre-commit = "^2.18.1"
mypy = "^0.942"
streamlit = "^1.8.1"
opencv-python-headless = "^4.5.5"
watchdog = "^2.1.7"
langdetect = "^1.0.9"
scikit-image = "^0.19.2"
hydra-core = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-sugar = "^0.9.4"
pytest-icdiff = "^0.5"
pytest-instafail = "^0.4.2"
pylint = "^2.13.5"
pytest-cov = "^3.0.0"
pytest-randomly = "^3.11.0"
yapf = "^0.32.0"
mypy = "^0.942"
toml = "^0.10.2"
codecov = "^2.1.12"
seleniumbase = "^2.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
